rules/Rules.atg
$namespace=rules
using System.Collections.Generic;
using System.IO;

COMPILER rules

// public TextWriter trace;
public DefinitionSet Definitions;
public RuleSet Rules;


public UserMatch FindGroup(string gid)
{
    if (!Definitions.ContainsKey(gid))
        throw new InvalidRuleException("this rule id doesn't exist'");
    return Definitions[gid];
}

public void CreateGroup(string gid, UserMatch exp)
{
    if (Definitions.ContainsKey(gid))
        throw new InvalidRuleException("this rule id already exists'");
    Definitions.Add(gid, exp);
}


CHARACTERS
    letter    = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz_".
    digit     = "0123456789".
    cr        = '\r'.
    lf        = '\n'.
    tab       = '\t'.
    space     = ' '.

TOKENS
    ident     = letter { letter | digit }.
    allow     = "allow".
    deny      = "deny".
    from      = "from".
    and       = '&'.
    or        = '|'.
    not       = '^'.
    semicolon = ';'.

COMMENTS FROM "/*" TO "*/" NESTED
COMMENTS FROM "//" TO lf

IGNORE cr + lf + tab + space

PRODUCTIONS


expression<out UserMatch exp> (. exp = null; .) = 
           '*' (. exp = new UserMatchAll(); .)
           | '@' ident (. exp = new SingleUserMatch(t.val); .)
           | '#' ident (. exp = FindGroup(t.val); .)
           | (. UserMatch left, right; .) expression<out left> and expression<out right> (. exp = left.And(right); .)
           | (. UserMatch left, right; .) expression<out left> or expression<out right> (. exp = left.And(right); .)
           | (. UserMatch exp1; .) not expression<out exp1> (. exp = exp1.Not(); .)
           | (. UserMatch exp2; .) '(' expression<out exp2> ')' (. exp = exp2; .).

definition (. UserMatch def = new UserMatchUnion(); UserMatch exp; .) 
     = ident (. CreateGroup(t.val, def); .) 
     ':' expression<out exp> (. def=def.Or(exp); .) 
     { ',' expression<out exp>  (. def=def.Or(exp); .) } semicolon.

rule = (. UserMatch exp; bool allow=false; .) ( allow (. allow = true; .) | deny (. allow = false; .) ) from 
  expression<out exp> (. Rules.Add(allow ? (Rule) new AllowingRule(exp) : new DenyingRule(exp)); .) 
  { ',' expression<out exp> (. Rules.Add(allow ? (Rule) new AllowingRule(exp) : new DenyingRule(exp)); .) }
  semicolon.

rules = { definition } { rule } .

END rules
.
